--- a/src/app/web-app/header/header.component.html
+++ b/src/app/web-app/header/header.component.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item align-self-center">
-          <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'/web-app/resource/collections'">Resource</a>
+          <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'/web-app/resource'">Resource</a>
         </li>
         <li class="nav-item align-self-center">
           <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="'/web-app/share'">Shares</a>
